--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -13,11 +13,6 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install System Dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libreadline-dev
-
       - name: Install Norminette
         run: |
           python3 -m pip install --upgrade pip
@@ -52,7 +47,7 @@ jobs:
       - name: Install System Dependencies
         run: |
           brew update
-          brew install readline coreutils
+          brew install coreutils
 
       - uses: actions/setup-python@v5
         with:
@@ -92,8 +87,7 @@ jobs:
 
       - name: Install System Dependencies
         run: |
-          # Fedora uses dnf. We need gcc and make for your 'Compilation' step.
-          dnf install -y readline-devel coreutils make gcc python3-pip python3-devel
+          dnf install -ycoreutils make gcc python3-pip python3-devel
 
       - name: Install Norminette
         run: |
@@ -102,7 +96,6 @@ jobs:
 
       - name: Run Norminette
         run: |
-          # Running as a module ensures we use the version we just installed
           python3 -m norminette . > norm.log || true
           if grep "Error:" norm.log | grep -v -E "Global variable|WRONG_SCOPE_VAR" > filtered_errors.log; then
             echo "❌ Norminette Errors Found:"
@@ -131,21 +124,18 @@ jobs:
       - name: Install System Dependencies
         run: |
           apk update
-          # coreutils provides 'timeout', build-base provides 'make' and 'gcc'
-          apk add build-base readline-dev coreutils python3 py3-pip
+          apk add build-base coreutils python3 py3-pip
 
       - name: Install Norminette
         run: |
           python3 -m venv /opt/venv
           /opt/venv/bin/pip install --upgrade pip
           /opt/venv/bin/pip install norminette
-          # Link it so it's in the PATH
           ln -s /opt/venv/bin/norminette /usr/bin/norminette
 
       - name: Run Norminette
         run: |
           norminette . > norm.log || true
-          # Filter errors while ignoring specific 42-style quirks if needed
           if grep "Error:" norm.log | grep -v -E "Global variable|WRONG_SCOPE_VAR" > filtered_errors.log; then
             echo "❌ Norminette Errors Found:"
             cat filtered_errors.log
@@ -157,7 +147,6 @@ jobs:
       - name: Compilation
         run: |
           make
-          # Checking if clean rules work
           make clean
           make fclean
           make re
